--- a/website/templates/admin/editproperty.html
+++ b/website/templates/admin/editproperty.html
@@ -305,7 +305,8 @@ block content %}
         </div>
         <div class="row mt-4" id="imagePreview"></div>
         <div class="text-center">
-          <button type="submit" class="btn btn-primary">Edit Property</button>
+          <button type="edit" class="btn btn-primary">Edit Property</button>
+          <button type="submit" class="btn btn-primary">Submit</button>
         </div>
       </div>
     </div>
