--- a/website/templates/request.html
+++ b/website/templates/request.html
@@ -44,7 +44,7 @@ block content %}
       </div>
 
       <div class="mb-3">
-        <label for="message" class="form-label">Message:</label>
+        <label for="message" class="form-label"></label>Nearest police station:</label>
         <textarea class="form-control" name="message" id="message"></textarea>
       </div>
 
