--- a/website/templates/admin/editproperty.html
+++ b/website/templates/admin/editproperty.html
@@ -304,8 +304,7 @@ block content %}
           />
         </div>
         <div class="row mt-4" id="imagePreview"></div>
-        <div class="text-center">
-          <button type="edit" class="btn btn-primary">Edit Property</button>
+        <div>
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
       </div>
