--- a/website/templates/property.html
+++ b/website/templates/property.html
@@ -7,8 +7,8 @@
       <div class="row">
         <div class="col-md-12 col-lg-8">
           <div class="title-single-box">
-            <h1 class="title-single">Our Amazing Properties</h1>
-            <span class="color-text-a">Grid Properties</span>
+            <h1 class="title-single">Our Amazing New Properties</h1>
+            <span class="color-text-a">NEW Construction </span>
           </div>
         </div>
         <div class="col-md-12 col-lg-4">
@@ -21,7 +21,7 @@
                 <a href="/">Home</a>
               </li>
               <li class="breadcrumb-item active" aria-current="page">
-                Properties Grid
+                Properties 
               </li>
             </ol>
           </nav>
@@ -40,7 +40,7 @@
             <form>
               <select class="custom-select">
                 <option selected>All</option>
-                <option value="1">New to Old</option>
+                <option value="1">New </option>
                 <option value="2">For Rent</option>
                 <option value="3">For Sale</option>
               </select>
