--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -137,11 +137,11 @@
                   <div class="icon-box-content">
                     <p class="mb-1">
                       Email.
-                      <span class="color-a">contact@example.com</span>
+                      <span class="color-a">contact@dreamhousing.com</span>
                     </p>
                     <p class="mb-1">
                       Phone.
-                      <span class="color-a">+54 356 945234</span>
+                      <span class="color-a">+917022641150</span>
                     </p>
                   </div>
                 </div>
@@ -156,9 +156,9 @@
                   </div>
                   <div class="icon-box-content">
                     <p class="mb-1">
-                      Manhattan, Nueva York 10036,
+                      Bangalore,India
                       <br />
-                      EE. UU.
+                      IND
                     </p>
                   </div>
                 </div>
