--- a/website/templates/forgot_password.html
+++ b/website/templates/forgot_password.html
@@ -1,11 +1,31 @@
-{% extends "base.html" %}
-
-{% block content %}
-<div class="form-container">
-  <form class="styled-form" method="POST">
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required />
-    <button type="submit">Reset Password</button>
-  </form>
+{% extends "base.html" %} {% block content %}
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card-title">Forgot Password</h2>
+          <form method="POST" class="needs-validation" novalidate>
+            <div class="form-group">
+              <label for="email">Email:</label>
+              <input
+                type="email"
+                class="form-control"
+                id="email"
+                name="email"
+                required
+              />
+              <div class="invalid-feedback">
+                Please provide a valid email address.
+              </div>
+            </div>
+            <button type="submit" class="btn btn-primary">
+              Reset Password
+            </button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock %}
